support role behavior for methods, convert to dzil
Add new config attribute '+_traits_behave_like_roles' which removes role
methods that override the original class methods, with docs. See
813f23a.

Convert to dzil.

--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
-Revision history for MooseX-Traits-Pluggable
+Revision history for MooseX::Traits::Pluggable
+
+{{$NEXT}}
 
 0.10  2010-07-25 08:44:14
     - better support for factory classes
